# AAArm6

./: .gitignore  Dockerfile  README.md  aar6.sh  docker-compose.yml  test_subs.py
Robot_ros2_ws/: aar6kin_group_worldL6_5000_1.000000_1.000000.ikcache  frames_2025-10-23_02.23.27.gv  frames_2025-11-27_02.52.52.gv  init_host.sh
Robot_ros2_ws/install/: local_setup.sh  setup.sh
Robot_ros2_ws/log/: latest_build  latest_list
Robot_ros2_ws/script/: lqrtest.py
Robot_ros2_ws/src/aar6/: CMakeLists.txt
Robot_ros2_ws/src/aar6/install/: local_setup.sh  setup.sh
Robot_ros2_ws/src/aar6/install/aar6/share/aar6/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
Robot_ros2_ws/src/aar6/install/aar6/share/aar6/launch/: display.launch.py
Robot_ros2_ws/src/aar6/install/aar6/share/aar6/urdf/: PAROL6.urdf
Robot_ros2_ws/src/aar6/launch/: monitor.launch.py
Robot_ros2_ws/src/aar6/log/: latest_build
Robot_ros2_ws/src/aar6/src/: joint_state_pub.cpp  trajectory_to_mcu_bridge.cpp
Robot_ros2_ws/src/aar6/urdf/: PAROL6.urdf
Robot_ros2_ws/src/moveit/: RVIZ_MULTI_WAYPOINT_GUIDE.md  package.xml
control_board/: v1.kicad_prl  v1.kicad_pro
control_board/v1/: _autosave-wokringv1ar.kicad_pcb  arv1.kicad_pcb  arv1.kicad_prl  fp-info-cache  selfr.kicad_pcb  selfr.kicad_prl  v1.1ar.kicad_pcb  v1.1ar.kicad_prl  v1.kicad_pcb  v1.kicad_prl  v1.kicad_pro  v1.kicad_sch  v1.kicad_sch-bak  wokringv1ar.kicad_pcb  wokringv1ar.kicad_prl  wokringv1ar.kicad_pro  ~wokringv1ar.kicad_pcb.lck
control_board/v1/Gerber/: wokringv1ar-B_Cu.gbr  wokringv1ar-B_Mask.gbr  wokringv1ar-B_Paste.gbr  wokringv1ar-B_Silkscreen.gbr  wokringv1ar-Edge_Cuts.gbr  wokringv1ar-F_Cu.gbr  wokringv1ar-F_Mask.gbr  wokringv1ar-F_Paste.gbr  wokringv1ar-F_Silkscreen.gbr  wokringv1ar-NPTH.drl  wokringv1ar-PTH.drl  wokringv1ar-job.gbrjob
hand_control/mediapipe_hand_tracking/: hand_tracking.py  hand_tracking_3d.py
install/: local_setup.sh  setup.sh
log/: latest_build
test/aar6/: CMakeLists.txt  package.xml
test/moveit/: .setup_assistant  CMakeLists.txt  MTC_SETUP.md  package.xml
test/moveit/config/: aar6.srdf  initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
test/moveit/launch/: cartesian_control.launch.py  demo_twist.launch.py  demo_twist_aar6.launch.py  moveit_rviz.launch.py  run_all.launch.py  servo.launch.py  setup_assistant.launch.py
test/moveit/scripts/: mtc_demo.py
test/moveit/src/: cartesian_control_aar6.cpp  cartesian_keyboard_teleop.py  demo_twist_aar6.cpp  servo_keyboard_input_aar6.cpp
uros_ws/install/: local_setup.sh  setup.sh
uros_ws/log/: latest_build
(+654 files in other folders)
